--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "empty-project-template",
+  "name": "client",
+  "version": "0.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
     "start": "expo start",
+    "build": "react-scripts build",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject"
   },
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "expo": "^30.0.1",
     "react": "16.3.1",
