--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^30.0.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
